Modification majeur (appel usine + prix des briques)